apontamento da page

--- a/filmes/package.json
+++ b/filmes/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://champs-8.github.io/React-JS",
+  "homepage": "React-JS/",
   "name": "filmes",
   "version": "0.1.0",
   "private": true,
