--- a/filmes/package.json
+++ b/filmes/package.json
@@ -1,6 +1,7 @@
 {
   "name": "filmes",
   "version": "0.1.0",
+  "homepage": "filmes/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
