--- a/filmes/package.json
+++ b/filmes/package.json
@@ -1,7 +1,7 @@
 {
   "name": "filmes",
   "version": "0.1.0",
-  "homepage": "React-JS/filmes/",
+  "homepage": "../filmes/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
